working, but a mess

--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html>
 <head>
   <title>id-test</title>
+  <link rel='import' href='auth-test.html'>
 </head>
 <body>
-  <div id='user_info'></div>
-  <button id='signin' style='display:none'>Sign in</button>
-  <button id='getalbums' style='display:none'>Get albums</button>
-  <button id='revoke' style='display:none'>Revoke token</button>
-  <script src='main.js'></script>
+  <auth-test></auth-test>
 </body>
 </html>
